--- a/readme.adoc
+++ b/readme.adoc
@@ -15,4 +15,4 @@ this document shows you how to create an asciidoctor-epub3 document
 === Notes
   1.  Do not use the latest version of ruby (issue with asciidoctor-epub3)
   2. Creating epub needs to have a special layout (see the asciidoctor-epub3 documentation)
-  3. The `spine` must be the first document of the project. You can call this file whatever you want but it must content a Table of Content (TOC) style stucture of your document (see example)
+  3. The `spine` must be the first document of the project i.e. `spine.adoc`. You can call this file whatever you want but it must content a Table of Content (TOC) stucture of your eupb (see example)
